--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "pg": "8.8.0",
     "reflect-metadata": "0.1.13",
-    "typeorm": "0.3.11"
+    "typeorm": "0.3.11",
+    "yup": "^1.1.1"
   }
 }
