--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,22 +4,25 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --ignore-watch node_modules ./src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "typeorm:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "16.11.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.9.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "16.0.2",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "8.8.0",
     "reflect-metadata": "0.1.13",
+    "sqlite3": "^5.1.6",
     "typeorm": "0.3.11",
     "yup": "^1.1.1"
   }
