--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,12 +6,18 @@
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules ./src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "typeorm:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts"
+    "typeorm:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts --fix ."
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "16.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.9.3"
   },
