--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --ignore-watch node_modules ./src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "typeorm:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts --fix ."
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts --fix .",
+    "git": "eslint --ignore-path .eslintignore --ext .js,.ts --fix . && git"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
