--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,14 +1,13 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "app.ts",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules ./src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "typeorm:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts --fix .",
-    "git": "eslint --ignore-path .eslintignore --ext .js,.ts --fix . && git"
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts --fix ."
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
